@@ -1,3 +1,8 @@
+2008-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
+	add 'add.colnames' and 'add.rownames' arguments
+
 2008-03-23  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold) :
